client/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      run: frontend
  template:
    metadata:
      labels:
        run: frontend
    spec:
      containers:
      - image: mmmehulll/codebit_client:0.1.0
        name: frontend
        ports:
        - containerPort: 80
