client/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: codebit-172-17-187-91.nip.io
    http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: frontend
          servicePort: 80
